small fix to toggle bags indexing

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -170,6 +170,7 @@
     <ClInclude Include="camera_mods.h" />
     <ClInclude Include="InstructionLength.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="raid.h" />
     <ClInclude Include="resource.h" />
     <ClInclude Include="vectors.h" />
     <ClInclude Include="Zeal.h" />
@@ -188,6 +189,7 @@
     <ClCompile Include="main_loop.cpp" />
     <ClCompile Include="memory.cpp" />
     <ClCompile Include="camera_mods.cpp" />
+    <ClCompile Include="raid.cpp" />
     <ClCompile Include="vectors.cpp" />
     <ClCompile Include="Zeal.cpp" />
   </ItemGroup>
