FFA loot options for raid (requires an addition to the raid window xml), added string replacement hook (modified toggle last two to target and myself) added a new bind for toggle last two (as the name intended)

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -157,6 +157,7 @@
     <ClInclude Include="commands.h" />
     <ClInclude Include="cycle_target.h" />
     <ClInclude Include="EqFunctions.h" />
+    <ClInclude Include="eqstr.h" />
     <ClInclude Include="EqStructures.h" />
     <ClInclude Include="experience.h" />
     <ClInclude Include="FindPattern.h" />
@@ -181,6 +182,7 @@
     <ClCompile Include="cycle_target.cpp" />
     <ClCompile Include="dllmain.cpp" />
     <ClCompile Include="EqFunctions.cpp" />
+    <ClCompile Include="eqstr.cpp" />
     <ClCompile Include="experience.cpp" />
     <ClCompile Include="FindPattern.cpp" />
     <ClCompile Include="hook_wrapper.cpp" />
