OldUI /buffs command to show buff timers.

--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -154,6 +154,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="binds.h" />
+    <ClInclude Include="buff_timers.h" />
     <ClInclude Include="chat.h" />
     <ClInclude Include="commands.h" />
     <ClInclude Include="cycle_target.h" />
@@ -182,6 +183,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="binds.cpp" />
+    <ClCompile Include="buff_timers.cpp" />
     <ClCompile Include="chat.cpp" />
     <ClCompile Include="commands.cpp" />
     <ClCompile Include="cycle_target.cpp" />
