--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -117,6 +117,9 @@
     <ClInclude Include="outputfile.h">
       <Filter>Header Files\other</Filter>
     </ClInclude>
+    <ClInclude Include="buff_timers.h">
+      <Filter>Header Files\other</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -177,6 +180,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="outputfile.cpp">
+      <Filter>Source Files\other</Filter>
+    </ClCompile>
+    <ClCompile Include="buff_timers.cpp">
       <Filter>Source Files\other</Filter>
     </ClCompile>
   </ItemGroup>
