--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -156,6 +156,7 @@
     <ClInclude Include="auto_stand.h" />
     <ClInclude Include="binds.h" />
     <ClInclude Include="buff_timers.h" />
+    <ClInclude Include="camera_math.h" />
     <ClInclude Include="chat.h" />
     <ClInclude Include="commands.h" />
     <ClInclude Include="cycle_target.h" />
@@ -186,6 +187,7 @@
     <ClCompile Include="auto_stand.cpp" />
     <ClCompile Include="binds.cpp" />
     <ClCompile Include="buff_timers.cpp" />
+    <ClCompile Include="camera_math.cpp" />
     <ClCompile Include="chat.cpp" />
     <ClCompile Include="commands.cpp" />
     <ClCompile Include="cycle_target.cpp" />
