Added a windows structure and pointer to better handle windows, Added in /alarm to open the alarm window

--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -120,6 +120,15 @@
     <ClInclude Include="buff_timers.h">
       <Filter>Header Files\other</Filter>
     </ClInclude>
+    <ClInclude Include="auto_stand.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="camera_math.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="spellsets.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -184,6 +193,15 @@
     </ClCompile>
     <ClCompile Include="buff_timers.cpp">
       <Filter>Source Files\other</Filter>
+    </ClCompile>
+    <ClCompile Include="auto_stand.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="camera_math.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="spellsets.cpp">
+      <Filter>Source Files\hooks</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
