--- a/Zeal/Zeal.vcxproj
+++ b/Zeal/Zeal.vcxproj
@@ -153,6 +153,7 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="alarm.h" />
     <ClInclude Include="auto_stand.h" />
     <ClInclude Include="binds.h" />
     <ClInclude Include="buff_timers.h" />
@@ -185,6 +186,7 @@
     <ClInclude Include="Zeal.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="alarm.cpp" />
     <ClCompile Include="auto_stand.cpp" />
     <ClCompile Include="binds.cpp" />
     <ClCompile Include="buff_timers.cpp" />
