modified project to ignore unitialized class members (had to put some default constructors on some large structs we don't initialize ourselves) multiple item displays;

--- a/Zeal/Zeal.vcxproj.filters
+++ b/Zeal/Zeal.vcxproj.filters
@@ -147,6 +147,9 @@
     <ClInclude Include="UIOptions.h">
       <Filter>Header Files\other</Filter>
     </ClInclude>
+    <ClInclude Include="item_display.h">
+      <Filter>Header Files\hooks</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
@@ -229,6 +232,9 @@
     </ClCompile>
     <ClCompile Include="UIOptions.cpp">
       <Filter>Source Files\other</Filter>
+    </ClCompile>
+    <ClCompile Include="item_display.cpp">
+      <Filter>Source Files\hooks</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
